--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Azure App Service
+name: deploy (prod)
 
 on:
   push:
@@ -12,37 +12,27 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 20
+      - name: Use Node 20
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install workspace dependencies
-        run: npm ci --no-audit --no-fund
+      # Install ONLY backend prod deps
+      - name: Install backend (prod only)
+        working-directory: backend
+        run: npm install --omit=dev --no-audit --no-fund
 
-      - name: Build backend
-        run: npm run build --workspace backend
-
-      - name: Prepare frontend assets
-        run: |
-          rm -rf backend/dist/public
-          mkdir -p backend/dist/public
-          cp -R backend/public/. backend/dist/public/
-
-      - name: Install backend production dependencies only
-        run: npm install --omit=dev --no-audit --no-fund --prefix backend
-
-      - name: Create deployment package
+      # Zip the backend folder so package.json is at the zip root
+      - name: Zip backend
         run: |
           cd backend
-          zip -r ../backend.zip . -x "*.git*"
+          zip -r ../backend.zip package.json package-lock.json server.js public node_modules
           cd ..
 
+      # Azure login via OIDC (keep your existing secrets)
       - name: Azure login
         uses: azure/login@v2
         with:
@@ -50,8 +40,9 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_B973AA95BDDB4C49A6975085CA622576 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_08053C01490A49349B359E2FE8EA0628 }}
 
+      # Deploy JUST the backend zip
       - name: Deploy to Azure Web App (prod)
         uses: azure/webapps-deploy@v3
         with:
-          app-name: docsearchengine-amd3dvf7hch0cnax
+          app-name: 'DocSearchEngine'
           package: backend.zip
